document named-module setup